@@ -1,3 +1,6 @@
+2013-05-10 v-0-1-19
+  (add) Set AutoUpdate to Manual if Environment "UPDATE_SUPPORT"=false
+
 2013-05-10 v-0-1-18
   (fix) run service.py async
   (add) BT Computer Icon
